# yolo_object_detection

./: CMakeLists.txt  README.md
config/: yolov3-tiny-custom.yaml
include/yolo_object_detection/: yolo_object_detection_node.hpp
launch/: yolo_object_detection.launch
src/: main.cpp  yolo_object_detection_node.cpp
yolo_network_config/: obj.names
yolo_network_config/cfg/: yolov3-tiny-custom.cfg  yolov3-tiny-scale_truck.cfg  yolov3-tiny.cfg
